[package]
name = "futures-signals-floem"
version = "0.1.0"
authors = ["Martin Kolařík <martin.kolarik@smartcontrol.cz>"]
description = "Minimal injection of multithreaded futures-signals values into floem TLS signals."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/martin-kolarik/futures-signals-floem"
homepage = "https://github.com/martin-kolarik/futures-signals-floem"

[dependencies]
crossbeam-channel = "^0.5"
floem = { git = "https://github.com/lapce/floem.git" }
futures-signals = "^0.3"
tokio = { version = "^1.37", features = ["rt-multi-thread"] }
